--- a/CC/templates/Complaint.html
+++ b/CC/templates/Complaint.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <title>HomePage</title>
+        <title>Complaints Box</title>
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/home.css">
+        <link rel="stylesheet" href="css/complaint.css">
         <script src="https://kit.fontawesome.com/d45f33e614.js" crossorigin="anonymous"></script>
     </head>
     <body>
