--- a/CC/templates/Member_information.html
+++ b/CC/templates/Member_information.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <title>HomePage</title>
+        <title>Member information</title>
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/home.css">
+        <link rel="stylesheet" href="css/member.css">
         <script src="https://kit.fontawesome.com/d45f33e614.js" crossorigin="anonymous"></script>
     </head>
     <body>
