--- a/CC/templates/basic_generic.html
+++ b/CC/templates/basic_generic.html
@@ -20,7 +20,8 @@
                         <h3 color="#112D4E"><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></h3>
                     {% else %}
                         <h3 color="#112D4E"><a href="{% url 'login'%}?next={{request.path}}">Login</a></h3>
-                    <!--    <h3 color="#112D4E"><a href="/CC/signup">Sign up</a> </h3> -->
+                        <h3 color="#112D4E"><a href="/CC/Sign up">Sign up</a></h3>
+
                     {% endif %}
                 </div>  
         </header>
