--- a/CC/static/css/style.css
+++ b/CC/static/css/style.css
@@ -25,7 +25,7 @@ footer{
 }
 
 main{
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: 100%;
     width:100%;
     height:900px;
@@ -79,7 +79,7 @@ li{
     padding-top: 10px;
 }  
 #user{
-    margin-left:90%;
+    margin-left:85%;
 }
 #links{
     font-weight: bold;
