--- a/CC/templates/Complaint.html
+++ b/CC/templates/Complaint.html
@@ -1,52 +1,39 @@
+{% extends "basic_generic.html" %}
+{% load static %}
 <html>
     <head>
-        <title>Complaints Box</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/complaint.css">
-        <script src="https://kit.fontawesome.com/d45f33e614.js" crossorigin="anonymous"></script>
+        {% block title %}<title>Complaints box</title>{% endblock %}
+        {% block style %}<link rel="stylesheet" href="{% static 'css/complaint.css' %}"> {% endblock %}
     </head>
     <body>
-        <!-- Header Menu of the Page -->
-        <header>
-                <!-- Logo -->
-                <div class="logo">
-                    <img src="images/logo.JPG" />
-                </div>   
-                <div id="user">
-                    <i class='fas fa-portrait' style='font-size:700%;color:#112D4E'></i>
-                    <h3 color="#112D4E">Username</h3>
-                </div>  
-        </header>
-        <!-- Main content between Header and Footer -->
-        <main style="background-image: url(images/wallpaper.JPG);">
-            <!-- Section 1 of Main content -->
-            <section class="main">
-                
-            </section>
- 
-        </main>
-        <!-- Footer Menu -->
-        <footer>
-            
-            <div id="links">
-                <h3><a href="Home.html">Home</a></h3>
-                <h3><a href="Membership_registration.html">Member Registration</a></h3>
-                <h3><a href="Member_information.html">Member Information</a></h3>
-                <h3><a href="Club_calender.html">Club Calender</a></h3>
-                <h3><a href="Facility_reservation.html">Reserve Facility</a></h3>
-                <h3><a href="News.html">Club News</a></h3>
-                <h3><a href="Complaint.html">Submit A Complaint</a></h3>
-            </div>
-            <div id="contact">
-                <h2>Contact us</h2>
-                <div style="overflow: hidden;">
-                    <a href="https://www.facebook.com/"> <i class="fa fa-facebook-square" style="font-size:36px"></i></a>
-                    <a href="https://www.twitter.com/"><i class="fa fa-twitter" style="font-size:36px"></i></a>
-                    <a href="https://www.instagram.com/"> <i class="fa fa-instagram" style="font-size:36px"></i></a>
-                </div>
-                
+        {% block content %}
+        <form id="fs-frm" name="complaint-form" accept-charset="utf-8" action="https://formspree.io/f/{form_id}" method="post">
+            <fieldset id="fs-frm-inputs">
 
+                <h1 style="font-size:30px;color:black;text-align: center;">Please Fill out the following information</h1><br>
+              <label for="full-name" style="font-size:20px;font-weight: bold;">Full Name:</label><br>
+              <input type="text" name="name" id="full-name" placeholder="First and Last" required=""><br><br>
+              <label for="email-address" style="font-size:20px;font-weight: bold;">Email Address:</label><br>
+              <input type="email" name="_replyto" id="email-address" placeholder="email@domain.com" required=""><br><br>
+              <label for="Telephone Number" style="font-size:20px;font-weight: bold;">Telephone Number: (Optional)</label><br>
+              <input type="Telephone Number" name="telephone" id="telephone" placeholder="(961) 55-555555"><br><br><br>
+              <label for="Is the complaint against" style="font-size:20px;font-weight: bold;">Is the complaint against</label><br>
+              <input type="checkbox" id="Staff Member" name="Staff Member" value="Staff member">
+                <label for="Staff Member"> Staff Member</label><br>
+                <input type="checkbox" id="Club Member" name="Club Member" value="Club Member">
+                <label for="Club Member"> Club Member</label><br>
+                <input type="checkbox" id="Other" name="Other" value="Other">
+                <label for="Other">Other</label><br><br><br>
+              <label for="Complaint Details" style="font-size:20px;font-weight: bold;">Complaint:</label><br>
+              <textarea rows="20" cols="100" name="complaint" id="complaint" placeholder=" Please specify the complaint details..." required=""></textarea><br><br>
+              <input type="checkbox" id="Keep this complaint anonymous" name="Keep this complaint anonymous" value="Keep this complaint anonymous">
+                <label for="Keep this complaint anonymous" style="font-size:20px;font-weight: bold;color:red">Keep this complaint anonymous</label><br>
+              <input type="hidden" name="_subject" id="email-subject" value="Complaint Form Submission" required=""><br>
+            </fieldset>
+            <div style="text-align:center;font-size:40px;">
+            <input type="submit"  value="Submit" >
             </div>
-        </footer>
+          </form>
+        {% endblock %}
     </body>
 </html>
