--- a/CC/templates/Home.html
+++ b/CC/templates/Home.html
@@ -1,52 +1,60 @@
+{% extends "basic_generic.html" %}
+{% load static %}
 <html>
     <head>
-        <title>HomePage</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/home.css">
-        <script src="https://kit.fontawesome.com/d45f33e614.js" crossorigin="anonymous"></script>
+        {% block title %}<title>Home page</title>{% endblock %}
+        {% block style %}<link rel="stylesheet" href="{% static 'css/home.css' %}"> {% endblock %}
     </head>
     <body>
-        <!-- Header Menu of the Page -->
-        <header>
-                <!-- Logo -->
-                <div class="logo">
-                    <img src="images/logo.JPG" />
-                </div>   
-                <div id="user">
-                    <i class='fas fa-portrait' style='font-size:700%;color:#112D4E'></i>
-                    <h3 color="#112D4E">Username</h3>
-                </div>  
-        </header>
-        <!-- Main content between Header and Footer -->
-        <main style="background-image: url(images/wallpaper.JPG);">
-            <!-- Section 1 of Main content -->
-            <section class="main">
-                
-            </section>
- 
-        </main>
-        <!-- Footer Menu -->
-        <footer>
-            
-            <div id="links">
-                <h3><a href="Home.html">Home</a></h3>
-                <h3><a href="Membership_registration.html">Member Registration</a></h3>
-                <h3><a href="Member_information.html">Member Information</a></h3>
-                <h3><a href="Club_calender.html">Club Calender</a></h3>
-                <h3><a href="Facility_reservation.html">Reserve Facility</a></h3>
-                <h3><a href="News.html">Club News</a></h3>
-                <h3><a href="Complaint.html">Submit A Complaint</a></h3>
-            </div>
-            <div id="contact">
-                <h2>Contact us</h2>
-                <div style="overflow: hidden;">
-                    <a href="https://www.facebook.com/"> <i class="fa fa-facebook-square" style="font-size:36px"></i></a>
-                    <a href="https://www.twitter.com/"><i class="fa fa-twitter" style="font-size:36px"></i></a>
-                    <a href="https://www.instagram.com/"> <i class="fa fa-instagram" style="font-size:36px"></i></a>
-                </div>
-                
+        {% block content %}
+        <style>
+            .button-one,
+            .button-two,
+            .button-three,
+            .button-four,
+            .button-five,
+            .button-six {
+                background: transparent; /* background color */
+            }
+            .button-one,
+            .button-two,
+            .button-three,
+            .button-four,
+            .button-five,
+            .button-six {
+                color: white; /* text color */
+                display: inline-block;
+                border: 5px solid white;
+                border-radius: 0px; /* square corners */
+                padding: 10px 18px; /* space around text */
+                font-weight: 700;
+                -moz-transition: all 0.2s;
+                -webkit-transition: all 0.2s;
+                transition: all 0.2s;
+                width: 550px;
+                height:100px;
+                margin: 5px;
+                text-align: center;
+                transform: translate(20px,10px);
 
-            </div>
-        </footer>
+            }
+
+            .button-one:hover,
+            .button-two:hover,
+            .button-three:hover,
+            .button-four:hover,
+            .button-five:hover,
+            .button-six:hover {
+                background: white; 
+                color:#112D4E;
+            }
+            </style>
+            <a class="button-one" title="Relevant Title" href="/CC/register">Member Registration</a> 
+            <a class="button-two" title="Relevant Title" href="/CC/memberinfo">Member Information</a> 
+            <a class="button-three" title="Relevant Title" href="/CC/clubcalender">Club Calendar</a> 
+            <a class="button-four" title="Relevant Title" href="/CC/Facility reservation">Facility Reservations</a>
+            <a class="button-five" title="Relevant Title" href="/CC/news">News</a>
+            <a class="button-six" title="Relevant Title" href="/CC/submit a complaint">Complaints</a>
+        {% endblock %}
     </body>
 </html>
