--- a/CC/templates/Member_information.html
+++ b/CC/templates/Member_information.html
@@ -1,52 +1,35 @@
+{% extends "basic_generic.html" %}
+{% load static %}
 <html>
     <head>
-        <title>Member information</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/member.css">
-        <script src="https://kit.fontawesome.com/d45f33e614.js" crossorigin="anonymous"></script>
+        {% block title %}<title>Member Information</title>{% endblock %}
+        {% block style %}<link rel="stylesheet" href="{% static 'css/member.css' %}"> {% endblock %}
     </head>
     <body>
-        <!-- Header Menu of the Page -->
-        <header>
-                <!-- Logo -->
-                <div class="logo">
-                    <img src="images/logo.JPG" />
-                </div>   
-                <div id="user">
-                    <i class='fas fa-portrait' style='font-size:700%;color:#112D4E'></i>
-                    <h3 color="#112D4E">Username</h3>
-                </div>  
-        </header>
-        <!-- Main content between Header and Footer -->
-        <main style="background-image: url(images/wallpaper.JPG);">
-            <!-- Section 1 of Main content -->
-            <section class="main">
-                
-            </section>
- 
-        </main>
-        <!-- Footer Menu -->
-        <footer>
-            
-            <div id="links">
-                <h3><a href="Home.html">Home</a></h3>
-                <h3><a href="Membership_registration.html">Member Registration</a></h3>
-                <h3><a href="Member_information.html">Member Information</a></h3>
-                <h3><a href="Club_calender.html">Club Calender</a></h3>
-                <h3><a href="Facility_reservation.html">Reserve Facility</a></h3>
-                <h3><a href="News.html">Club News</a></h3>
-                <h3><a href="Complaint.html">Submit A Complaint</a></h3>
-            </div>
-            <div id="contact">
-                <h2>Contact us</h2>
-                <div style="overflow: hidden;">
-                    <a href="https://www.facebook.com/"> <i class="fa fa-facebook-square" style="font-size:36px"></i></a>
-                    <a href="https://www.twitter.com/"><i class="fa fa-twitter" style="font-size:36px"></i></a>
-                    <a href="https://www.instagram.com/"> <i class="fa fa-instagram" style="font-size:36px"></i></a>
-                </div>
-                
+        {% block content %}
+        <h1 style="text-align: center;">Member Information</h1> 
+        {% if member_found %}
+        <h3>First name: {{fname}}</h3>
+        <h3>Last name: {{lname}}</h3>
+        <h3>Date of birth: {{Date_of_birth}}</h3>
+        <h3>Membership Type: {{membership}}</h3>
+        <h3>Membership deadline: {{deadline}} </h3>
 
-            </div>
-        </footer>
+        <form>
+            <label for="Notifications"size="50" style = "position:relative; color:rgb(34, 34, 169); left:800px; top:-470px;">Notifications:</label><br>
+            <input type="text" disabled="disabled" id="Notifications" name="Notifications" value=""size="50" style = "position:relative; left:800px; height:150px;top:-470px;" ><br><br>
+            
+            <label for="Membership_History"size="50" style = "position:relative; color:rgb(34, 34, 169); left:800px; top:-400px;">Membership History:</label><br>
+            <input type="text" disabled="disabled" id="Membership_History" name="Membership_History" value=""size="50" style = "position:relative; left:800px; height:150px;top:-400px;" ><br><br>
+
+        </form> 
+
+
+        {% else %}
+        <br><br>
+        <h2 style="text-align: center; color:red;" >This user is not a registered member yet!</h2>
+        <h2 style="text-align: center;">For registration <a href="/CC/register">click here</a></h2>  
+        {% endif %}
+        {% endblock %}
     </body>
 </html>
