--- a/CC/templates/Member_information.html
+++ b/CC/templates/Member_information.html
@@ -14,16 +14,9 @@
         <h3>Date of birth: {{Date_of_birth}}</h3>
         <h3>Membership Type: {{membership}}</h3>
         <h3>Membership deadline: {{deadline}} </h3>
-
-        <form>
-            <label for="Notifications"size="50" style = "position:relative; color:rgb(34, 34, 169); left:800px; top:-470px;">Notifications:</label><br>
-            <input type="text" disabled="disabled" id="Notifications" name="Notifications" value=""size="50" style = "position:relative; left:800px; height:150px;top:-470px;" ><br><br>
-            
-            <label for="Membership_History"size="50" style = "position:relative; color:rgb(34, 34, 169); left:800px; top:-400px;">Membership History:</label><br>
-            <input type="text" disabled="disabled" id="Membership_History" name="Membership_History" value=""size="50" style = "position:relative; left:800px; height:150px;top:-400px;" ><br><br>
-
-        </form> 
-
+        <br><br>
+        <h3>To update your information <a href='/CC/MemberUpdate'>Click here </a></h3>
+        <h3>To delete your membership <a href='/CC/MemberDelete'>Click here</a></h3>
 
         {% else %}
         <br><br>
