--- a/CC/templates/Club_calender.html
+++ b/CC/templates/Club_calender.html
@@ -6,7 +6,23 @@
         {% block style %}<link rel="stylesheet" href="{% static 'css/calender.css' %}"> {% endblock %}
     </head>
     <body>
-        {% block content %}
-        {% endblock %}
+    {% block content %}
+    <h1>Reservation List</h1>
+
+    {% if reservations %}
+    <ul>
+
+      {% for reservation in reservations %}
+      <li>
+        {{reservation}}
+      </li>
+      {% endfor %}
+
+    </ul>
+
+    {% else %}
+      <h1>There are no reservations available.</h1>
+    {% endif %}       
+    {% endblock %}
     </body>
 </html>
